style: update notification item hover background color for improved visibility

--- a/static/styles.css
+++ b/static/styles.css
@@ -2757,7 +2757,7 @@ input[type="file"] {
 }
 
 .notification-item:hover {
-  background-color: #f5f5f5;
+  background-color: #6d7a88;
 }
 
 /* Post Categories Right */
